[gd_scene load_steps=5 format=3 uid="uid://tymiu7300uqq"]

[ext_resource type="FontFile" uid="uid://dtiujgu3wn57w" path="res://4all/Pixeled.ttf" id="1_862mm"]
[ext_resource type="Script" uid="uid://belidglkllcnv" path="res://PowerupSelection/powerup_selection.gd" id="1_mmih1"]

[sub_resource type="LabelSettings" id="LabelSettings_mmih1"]
font = ExtResource("1_862mm")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_ijlmo"]
font = ExtResource("1_862mm")
font_size = 5
font_color = Color(0.32915837, 0.3291584, 0.3291584, 1)

[node name="PowerupSelection" type="CanvasLayer" groups=["powerup_selection"]]
script = ExtResource("1_mmih1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -35.0
offset_right = 120.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = -1.0
offset_top = 6.0
offset_right = 240.0
offset_bottom = 64.0

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Audience Power-Up Vote!"
label_settings = SubResource("LabelSettings_mmih1")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="PowerupCard1" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PowerupCard2" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PowerupCard3" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VoteLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Audience is voting..."
label_settings = SubResource("LabelSettings_ijlmo")
horizontal_alignment = 1

[node name="TimerBar" type="ProgressBar" parent="Panel/VBoxContainer"]
layout_mode = 2
show_percentage = false
indeterminate = true
editor_preview_indeterminate = false
